--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ h4 {
 	font-family: 'Amatic SC', cursive !important;
 }
 
-.color1{color:#BF8D8E}/*MOUNTAIN MEADOW*/
-.color2{color:#F8BDC3/*TALL POPPY*/}
+.color1{color:#BF8D8E}
+.color2{color:#4A235A
 
 
 .card {
